# Prelude.

AC_INIT([libparser], [0.0], [druon@lirmm.fr])
AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE([foreign -Wall -Werror])

LT_INIT

# Checks for programs.

AC_PROG_LIBTOOL
AC_PROG_CXX

YACC=bison

AC_PROG_YACC
AC_PROG_LEX


# Checks for libraries.

# Checks for header.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

# Output 

AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile include/Makefile src/Makefile testing/Makefile])
AC_OUTPUT
